# ncdkt

./: CMakeLists.txt  csr_karte.h  main.cpp  spiel.cpp  spiel.h  spieler.cpp  spieler.h  spielfeld.cpp  spielfeld.h
